<?xml version="1.0"?>
<package format="2">
  <name>feu</name>
  <version>1.0.0</version>
  <description>The feu package</description>
  <maintainer email="guillaume.van_putten@edu.devinci.fr">guillaume</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pynput-pip</exec_depend>
  <exec_depend>ODrive</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
